--- a/CSS/main.css
+++ b/CSS/main.css
@@ -18,23 +18,15 @@ body {
 
 .calculadora {
     background: linear-gradient(45deg,rgb(95, 95, 95), rgb(92, 92, 92));
-    color: aliceblue;
+    color: white;
     width: 350px;
     max-width: 100%;
     padding: 1.5rem;
     border-radius: 1rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: .5rem;
-}
-.calculadora::before{
-    content: "";
-    background: black;
-    position: absolute;
-    inset: 0;
-    z-index: -1;
-    transform: translateY(9%) scale(0.45);
-    filter: blur(50px);
+    gap: .7rem;
+    box-shadow: 10px 10px 25px 3px rgba(0, 0, 0, 0.767);
 }
 
 .pantalla {
@@ -60,6 +52,7 @@ body {
     align-items: center;
     border-radius: .5rem;
     cursor: pointer;
+    box-shadow: 2px 2px 2px 3px rgba(0, 0, 0, 0.767);
 }
 
 .btn:hover {
@@ -73,6 +66,10 @@ body {
 #igual {
     grid-row: span 2;
     background-color: rgb(54, 54, 54);
+}
+
+#igual:hover {
+    background-color: rgb(75, 74, 74);
 }
 
 #igual:hover {
